<resources>
    <string name="app_name">Расписание БГАС</string>

    <string name="action_group">Изменить группу</string>
    <string name="action_view">Изменить неделю</string>

    <string name="actoin_update">Обновить</string>
    <string name="action_settings">Настройки</string>
    <string name="action_info">Информация</string>
    <string name="okay">OK</string>
    <string name="title_activity_settings">setings</string>
    <string name="title_activity_workspace">workspace</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="selectGroup">Выберите группу:</string>
    <string name="selectFaculti">Выберите факультет:</string>

    <string name="less1">8:00 – 9:40</string>
    <string name="less2">9:55 – 11:35</string>
    <string name="less3">12:15 – 13:55</string>
    <string name="less4">14:10 – 15:50</string>
    <string name="less5">16:20 – 18:00</string>
    <string name="less6">18:15 – 19:55</string>
    <string name="NowWeek">Текущая неделя</string>
    <string name="_1Week">1 неделя</string>
    <string name="_2Week">2 неделя</string>
    <string name="_3Week">3 неделя</string>
    <string name="_4Week">4 неделя</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="spinner_faculty">Какой Ваш Факультет?</string>
    <string name="spinner_group">Какая Ваша группа?</string>


</resources>
