<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="by.bsac.timetable.SelectGroup">

    <item
        android:id="@+id/icon_group"
        android:orderInCategory="2"
        android:title="@string/action_group" />


    <!--<item-->
            <!--android:id="@+id/action_view"-->
            <!--android:orderInCategory="3"-->
            <!--android:title="@string/action_view">-->

    <!--</item>-->
    <item
            android:id="@+id/action_settings"
            android:orderInCategory="4"
            android:title="@string/action_settings"
            android:visible="false"
    />

    <item
        android:id="@+id/action_info"
        android:orderInCategory="5"
        android:title="@string/action_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_update"
        android:orderInCategory="3"
        android:title="@string/actoin_update"
        app:showAsAction="ifRoom"

        />




</menu>
